--- a/src/a4_task2_sydney_rilum.Rmd
+++ b/src/a4_task2_sydney_rilum.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Assignment 4- Task 2 Mini Exploratory Report"
+title: "Juvenile Snowshoe Hares: Exploratory Report"
 author: "Sydney Rilum"
 date: "11/16/2020"
 output: html_document
@@ -14,34 +14,45 @@ library(kableExtra)
 library(lubridate)
 library(ggbeeswarm)
 library(effsize)
+library(broom)
 ```
 
 ## Introduction
 
-A 4 - 5 sentence "mini-introduction" to what this study is exploring, including basic background information about the subject, site and study (with citations as needed), and a brief overview of what is included in the exploratory report. You should probably do this last.
+A 4 - 5 sentence "mini-introduction" to what this study is exploring, including basic background information about the subject, site and study (with citations as needed), and a brief overview of what is included in the exploratory report. 
+
+This report provides an exploratory overview of juvenile snowshoe hare counts data from Bonanza Creek Experimental Forest, Alaska across three different sampling sites from 1998-2012 (Kielland et al. 2017). Specifically, juvenile hare weights are compared by sex and sampling site through descriptive statistics and data visualizations. In addition, the relationship between juvenile weight and hind foot length is explored.
 
 
 ## Data and Analyses
 
-A 3 - 4 sentence section in which you briefly describe the data, including citation & credit as needed, and provide an overview of the main analysis, statistical methods and tools used.
+Snowshoe hare physical measurements were collected and made available by Kielland et al. at the Bonanza Creek Long Term Ecological Research Site in Alaska (Kielland et al. 2017). The data contains observations for 3,197 recorded hare trappings, collected across three sample sites ("Bonanza Black Spruce", "Bonanza Mature", and "Bonanza Riparian") differing in habitat and vegetation type, from the years 1998 to 2012. The following exploratory data visualization includes comparison of juvenile hare weights by sex and site through descriptive statistics, exploratory plots, a two-sample t-test using a significance level (α) of 0.05, and analysis of effect size by Cohen's d. The relationship between juvenile weight and hind foot length is explored by simple linear regression. All analyses are in R version 4.0.2 using RStudio version 1.3.1093
+
 
 ```{r}
+# Read in the data
 bonanza <- read.csv(here("data", "bonanza_hares.csv"))
 ```
-
 
 ## Exploratory Findings
 
 ### A. Annual juvenile hare trap counts
 
+The total number of juvenile hare trappings during each year of the study were calculated in order to visualize the number of observations within the data set.
 
 ```{r}
+# Create a subset of data that filters for juvenile hares and counts by year
 ann_juvenile_counts <- bonanza %>% 
   mutate(date = mdy(date), .keep = "unused") %>% 
   mutate(year = year(date)) %>% 
   filter(age == "j") %>% 
   count(year)
 
+# Calculate mean annual number of juvenile hares trapped
+mean_juvenile_traps <- ann_juvenile_counts %>% 
+  summarize(mean = mean(n))
+
+# Create a bar graph displaying annual juvenile hare trap counts per year
 ggplot(data = ann_juvenile_counts, aes(x = year, y = n)) +
   geom_col(fill = "cyan4") +
   labs(x = "Year", 
@@ -50,22 +61,26 @@ ggplot(data = ann_juvenile_counts, aes(x = year, y = n)) +
    scale_x_continuous(breaks = c(1999, 2001, 2003, 2005, 2007, 2009, 2011)) +
   theme_minimal() +
   theme(legend.position = "none")
-
 ```
 
-**Figure 1.** 
-????????????????????????????
-Flipper length observations (mm) for nesting adults of the three penguin species (Adélie, chinstrap, and gentoo). Gold (Adélie), teal (chinstrap) and coral (gentoo) points indicate individual observations for flipper length (millimeters) of an adult nesting penguin. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. Data: Gorman et al. (2014).
+**Figure 1.** Annual number of juvenile snowshoe hare trappings per year from 1999 to 2012. Note there are no juvenile hare traps recorded in 2002 and 2009. Data: Kielland et al. (2017).
+
+As displayed in the bar graph, the maximum count of juvenile hare trappings was recorded in 1999 with 126 hare traps. The years 2004, 2007, 2010, and 2012 had the smallest number of juvenile hare trappings, with 8, 5, 2, and 6 hare traps respectively. In addition, the mean annual number of juvenile hare trappings was 31.5. Snowshoe hare densities appear to be highest in 1999 and  declining since. This is not atypical for snowshoe hares as they usually experience population fluctuations of 8-11 years (Kielland et al. 2017). It is important to note that these yearly counts can be impacted by effort. Thus, in order to standardize the juvenile hare population in future analyses, I would suggest that there is a consistent number of traps set for the same number of days each year in the study.  
 
 
 ### B. Visualize juvenile hare weights
 
+Various data visualizations were created to compare juvenile hare weights by both sex and site, as well as by sex and site separately. When comparing juvenile hare weights by both site and sex in Figure 2, male hares have larger median weights than female hares across all three sampling sites. When hare weights are compared by sex alone in Figure 3, male hares are on average heavier than female hares, with means of 945.86 g and 855.39 g, respectively. Lastly, when sites alone are used to compare hare weights in Figure 4, the Bonanza Black Spruce site had the heaviest juvenile hares, with a mean weight of 1036.17 g. Juvenile hares at the Bonanza Mature and Bonanza Riparian sites had similar smaller mean weights of 878.05 g and 862.59 g, respectively.
+
 ```{r}
+# Create a subset of data that filters for juvenile hares and renames sites
 hare_weights <- bonanza %>% 
-  mutate(date = mdy(date), .keep = "unused") %>% 
-  mutate(year = year(date)) %>% 
   filter(age == "j") %>% 
-  select(weight, sex, grid)
+  select(weight, sex, grid) %>% 
+  mutate(grid = case_when(
+    grid == "bonbs" ~ "Bonanza Black Spruce", 
+    grid == "bonmat" ~ "Bonanza Mature",
+    grid == "bonrip" ~ "Bonanza Riparian"))
 
 # Juvenile Hare Weights by Sex and Site
 ggplot() +
@@ -83,19 +98,18 @@ ggplot() +
   scale_color_manual(values = c("cornflowerblue","cyan4", "coral2")) +
   theme_light() +
   theme(legend.position = "none")
+```
+
+**Figure 2.** Juvenile snowshoe hare weights (g) compared by sex for each of the three sampling sites. A boxplot is overlaid on the beeswarm plot to display the distributions of each subset of data, including the median (bold vertical line) and 25^th^ and 75^th^ percentile values (box endpoints) for each subset. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
 
 
-
-# Juvenile Hare Weights by Sex
-hare_mean_weight_sex <- bonanza %>% 
-  mutate(date = mdy(date), .keep = "unused") %>% 
-  mutate(year = year(date)) %>% 
-  filter(age == "j") %>% 
-  select(date, year, weight, sex, grid) %>% 
+```{r}
+# Create a subset of data that calculates mean hare weight for each sex
+hare_mean_weight_sex <- hare_weights %>% 
   group_by(sex) %>% 
   summarize(mean_weight = mean(weight, na.rm = TRUE))
 
-
+# Juvenile Hare Weights by Sex
 ggplot() +
   geom_beeswarm(data = hare_weights, 
                 aes(x = sex, y = weight, color = sex),
@@ -114,19 +128,18 @@ ggplot() +
        title = "Juvenile Hare Weights by Sex") +
   theme_light() +
   theme(legend.position = "none")
+```
+
+**Figure 3.** Juvenile snowshoe hare weights (g) compared by sex. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. For the sex variable, "f" represents female hares, "m" represents male hares, and "NA" represents hare trap observations without a sex recorded. Data: Kielland et al. (2017).
 
 
-
-# Juvenile Hare Weights by Site
-hare_mean_weight_site <- bonanza %>% 
-  mutate(date = mdy(date), .keep = "unused") %>% 
-  mutate(year = year(date)) %>% 
-  filter(age == "j") %>% 
-  select(date, year, weight, sex, grid) %>% 
+```{r}
+# Create a subset of data that calculates mean hare weight for each site
+hare_mean_weight_site <- hare_weights %>% 
   group_by(grid) %>% 
   summarize(mean_weight = mean(weight, na.rm = TRUE))
 
-
+# Juvenile Hare Weights by Site
 ggplot() +
   geom_beeswarm(data = hare_weights, 
                 aes(x = grid, y = weight, color = grid),
@@ -147,62 +160,39 @@ ggplot() +
   theme(legend.position = "none")
 ```
 
-**Figure 2.** 
-????????????????????????????
-
-
+**Figure 4.** Juvenile snowshoe hare weights (g) compared by sampling site. Box endpoints indicate the 25^th^ and 75^th^ percentile values; the black line and black point within the box indicate the median and mean value for each species, respectively. Data: Kielland et al. (2017).
 
 
 ### C. Juvenile weight comparison (male & female snowshoe hares)
 
-Compare mean weights for juvenile male and female snowshoe hares included in this study.
-
 ```{r}
-# Exploratory graphs
-hare_weights <- bonanza %>% 
-  mutate(date = mdy(date), .keep = "unused") %>% 
-  mutate(year = year(date)) %>% 
-  filter(age == "j") %>% 
-  select(weight, sex, grid)
-
-# Histograms
-ggplot(data = hare_weights, aes(x = weight)) +
-  geom_histogram(bins = 15) +
-  facet_wrap(~sex)
-
-# QQ-plots
-ggplot(data = hare_weights, aes(sample = weight)) +
-  geom_qq() +
-  facet_wrap(~sex)
-
-```
-
-
-A finalized table containing the mean, standard deviation, and sample size for male and female juvenile snowshoe hares, with a table caption (remember, this is placed *above* the table in your report)
-
-**Table 1.**
-???????
-```{r}
-# Descriptive Statistics Table
-
+# Descriptive statistics data subset
 hare_weight_stats <- bonanza %>% 
-  mutate(date = mdy(date), .keep = "unused") %>% 
-  mutate(year = year(date)) %>% 
   filter(age == "j") %>% 
+  mutate(sex = case_when(
+    sex == "f" ~ "Female", 
+    sex == "m" ~ "Male")) %>% 
   select(weight, sex) %>% 
   group_by(sex) %>% 
-  summarize(mean_weight = mean(weight, na.rm = TRUE),
-            sd_weight = sd(weight, na.rm = TRUE),
+  summarize(mean_weight = round(mean(weight, na.rm = TRUE),2),
+            sd_weight = round(sd(weight, na.rm = TRUE),2),
             sample_size = n())
-
-kbl(hare_weight_stats) %>% 
-  kable_styling()
 ```
 
+**Table 1.** Descriptive statistics (mean, standard deviation, and sample size) for male and female juvenile snowshoe hares. Data: Kielland et al. (2017).
 
 ```{r}
-# Create vectors of weight for female and male juvenile hares separately.
+# Descriptive statistics table
+hare_weight_stats %>% 
+  kable(col.names = c("Sex", "Mean weight (g)", "Standard deviation (g)", "Sample size")) %>% 
+  kable_styling(bootstrap_options = "striped")
+```
 
+ 
+```{r, include = FALSE}
+# T-test code: 
+
+# Create vectors of weight for female and male juvenile hares separately.
 hare_f <- hare_weights %>% 
   filter(sex == "f") %>% 
   pull(weight)
@@ -211,35 +201,70 @@ hare_m <- hare_weights %>%
   filter(sex == "m") %>% 
   pull(weight)
 
-```
+# Plot histograms & qq-plots to check assumptions
+hist(hare_f) # Looks normal
+qqnorm(hare_f) # Looks very linear
+hist(hare_m) # Possibly a bit negatively skewed
+qqnorm(hare_m) # Looks relatively linear
 
-## T-tests, a couple different ways
+# Overall: assumptions of normality hold, & sample size additionally >> Central Limit Theorem (means will be normally distributed). Two-sample t-test OK for means comparison! 
 
-Is there a significant difference in weight between male and female juvenile hares?
 
-```{r}
+## T-test: Is there a significant difference in weight between male and female juvenile hares?
+
+# Run the t-test:
 hare_ttest <- t.test(hare_f, hare_m)
 hare_ttest
 
-cohen.d(hare_f, hare_m, na.rm = TRUE)
+# Get the tidy model results to call outputs in-line: 
+hare_ttest_tidy <- tidy(hare_ttest)
+
+# Get the means & SDs for each: 
+male_mean <- mean(hare_m)
+female_mean <- mean(hare_f, na.rm = TRUE)
+male_sd <- sd(hare_m)
+female_sd <- sd(hare_f, na.rm = TRUE)
+
+# Get the effect size: 
+hare_effsize <- cohen.d(hare_f, hare_m, na.rm = TRUE)
+hare_effsize
+
 ```
 
-Are male hares significantly larger (weight) than female hares?
-
-```{r}
-t.test(hare_m, hare_f, alternative = "greater")
-```
+On average, juvenile male hares have larger mean weights than juvenile female hares (`r round(male_mean,2)` $\pm$ `r round(male_sd, 2)` and `r round(female_mean,2)` $\pm$ `r round(female_sd, 2)` g, respectively; mean $\pm$ 1 standard deviation) (Table 1). While the absolute difference in means is `r round(male_mean, 2) - round(female_mean, 2)` g (a `r round((male_mean - female_mean)/((male_mean + female_mean)/2)*100, 2)`% difference), the difference in means is significant (Welch's two-sample t-test: t(`r round(hare_ttest_tidy$parameter,2)`) = `r round(hare_ttest_tidy$statistic,2)`, p < 0.01), and the effect size is small (Cohen's *d* = `r round(hare_effsize$estimate,2)`). There were a small number (*n* = `r hare_weight_stats[3,4]`) of trapped hares without recorded sex. The mean weight for hares labeled "NA" for sex was much lower than for hares recorded as female and male. 
 
 
 ### D. Relationship between juvenile weight & hind foot length
 
-Explore the relationship between juvenile snowshoe hare hind foot length (variable `hindft`, recorded in millimeters), and weight. Include all juvenile hares in the study. Create a final visualization of juvenile hare hind foot length versus weight. Include a figure caption.
-
-```{r}
+```{r, include = FALSE}
 juvenile_foot_weight <- bonanza %>% 
   filter(age == "j") %>% 
   select(weight, hindft)
 
+# Linear regression/model:
+hare_lm <- lm(weight ~ hindft, data = juvenile_foot_weight)
+
+# Get tidy versions of the model output to call later on in text
+hare_lm_tidy <- tidy(hare_lm)
+hare_lm_glance <- glance(hare_lm)
+
+# See model diagnostics for proof of mostly normally distributed and homoscedastic residuals
+plot(hare_lm)
+
+# Get Pearson's r correlation
+hare_cor <- cor.test(juvenile_foot_weight$weight, juvenile_foot_weight$hindft)
+
+# Tidy version of correlation output:
+hare_cor_tidy <- tidy(hare_cor)
+
+summary(hare_lm)
+hare_cor
+
+```
+
+
+```{r}
+# Juvenile hare hind foot length versus weight
 ggplot(data = juvenile_foot_weight, aes(x = weight, y = hindft)) +
   geom_point(color = "cyan4") +
   labs(x = "Weight (g)", 
@@ -252,68 +277,29 @@ ggplot(data = juvenile_foot_weight, aes(x = weight, y = hindft)) +
               size = 0.5,
               fill = "gray10",
               alpha = 0.5) +
-  ggpubr::stat_regline_equation(label.x = 1300, label.y = 80)
+  ggpubr::stat_regline_equation(label.x = 1250, label.y = 93)
 ```
 
-Find Pearson's *r* for correlation: 
+**Figure 5.** Relationship between flipper length (mm) and body mass (g) for the three penguin species. Points indicate individual penguin measurements (Adélie = gold circles; chinstrap = teal triangles; gentoo = coral diamonds). Linear model summary: $\beta$~1~ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^, p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,2)`, Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`). Data: Kielland et al. (2017).
 
-In lecture we talked about the coefficient of determination, R^2^, which tells us how much of the variance in the dependent variable is explained by the model. 
+In 2 - 3 sentences below your figure, describe the outcome of your linear regression exploration (e.g. slope interpretation, R2 value, and Pearson's r correlation) and touch briefly on which assumption(s) of linear regression may be a concern, and additional thoughts you have about how well (or not well…) the linear model describes the relationship. What worries you? 
 
-We might also want to explore the strength of the correlation (degree of relationship) between two variables which, for two linearly related continuous variables, can be expressed using Pearson's *r*. 
+The relationship between juvenile hare weight and hind foot length appears relatively linear (Figure 5). Simple linear regression revealed that hare weight significantly predicts hind foot length (p < 0.001, R^2^ = `r round(hare_lm_glance$r.squared,2)`) with an average slope of $\beta$ = `r round(hare_lm_tidy$estimate[2], 2)` g mm^-1^. This means that for each one millimeter increase in hind foot length we expect an average increase in hare weight of `r round(hare_lm_tidy$estimate[2], 2)` g). The Multiple R^2^ value is 0.2988, meaning that 29.9% or ~30% of variance in hind foot length is explained by weight.
 
-Pearson's *r* ranges in value from -1 (perfectly negatively correlated - as one variable increases the other decreases) to 1 (perfectly positively correlated - as one variable increases the other increases). A correlation of 0 means that there is no degree of relationship between the two variables. 
-
-Typical guidelines look something like this (there's wiggle room in there): 
-
-- *r* = 0: no correlation
-- *r* < |0.3|: weak correlation
-- *r* between |0.3| and |0.7|: moderate correlation
-- *r* > |0.7|: strong correlation
-
-We'll use the `cor.test()` function, adding the two vectors (`flipper_length_mm` and `body_mass_g`) as the arguments. The function reports the Pearson's *r* value, and performs a hypothesis test with null hypothesis that the correlation = 0. 
-
-```{r}
-hare_cor <- cor.test(juvenile_foot_weight$weight, juvenile_foot_weight$hindft)
-
-hare_cor
-```
-
-Here, we see that there is a moderate positive correlation between juvenile hare weight and hind foot length.
-
-**Note**: Once you have a "template" statement, you can just replace `penguins_cor` here with whatever your correlation analysis is stored as! You don't need to recreate the wheel every time! 
-
-
-
-
-
-
-
-
-Once we've decided that a linear relationship makes sense, we'll model it using `lm()`. 
-
-Note that we haven't checked all assumptions yet. That's because a lot of our assumptions for linear regression are based on model *residuals* (e.g. normality & homoscedasticity of residuals), which we can't calculate until after we find the predicted values from the model ($residual = y_{actual} - y_{predicted}$). 
-
-So make the model first: 
-```{r}
-# Linear model:
-hare_lm <- lm(weight ~ hindft, data = juvenile_foot_weight)
-
-# Return the complete overview:
-summary(hare_lm)
-```
-**Check the Week 6 Part 2 lecture video** for information about how to interpret different pieces of this output, but a couple to highlight: 
-
-- Both the intercept and hind foot coefficients are significantly different from zero (not super interesting)
-- The Multiple R^2^ value is 0.2988 - meaning that 29.9% of variance in weight is explained by hind foot length
-
-
-
-
+From the Pearson's r correlation test, hind foot length and weight were found to be moderately, and significantly, positively correlated (Pearson's *r* = `r round(hare_cor_tidy$estimate,2)`, p < 0.001). Diagnostic plots (not included in this report) reveal relatively normally distributed and homoscedastic residuals. 
 
 
 ## Summary
 
-Include a very short summary describing your main findings from your juvenile hares exploration (bulletpoints are fine)
+Exploratory juvenile hares data analysis reveals the following findings:
+
+- Male juvenile hares are the largest of the three species in both mean flipper length and body mass
+- Male gentoo penguins longer mean flipper length than female gentoos (the difference is significant, and the effect size is large)
+- Flipper length appears linearly related with body mass across all three penguin species; the relationship (by simple linear regression) is significant, with a slope (expected average increase in body mass with a 1 mm increase in flipper length) of 49.69 g mm-1.
+
+Next steps:
+
+- Explore the impacts of sex and site when comparing the relationship between weight and hind foot length.
 
 
 ## Citations
